--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,27 +70,33 @@
                         </div>
 
                         <div class="row mb-4 d-flex justify-content-center">
-                            
-                            <!-- Elemento 1: Diseño de interfaz -->
+                            <!-- Elemento 1: horas de trabajo  -->
                             <div class="col-md-6">
                                 <div class="form-outline mb-4">
-                                    <input type="number" id="interfazHoras"
+                                    <input type="number" id="horasTrabajo"
                                         class="form-control" />
-                                    <label class="form-label" for="interfazHoras">Diseño
-                                        de interfaz (horas)</label>
+                                    <label class="form-label" for="horasTrabajo">Horas de trabajo</label>
                                 </div>
                             </div>
 
-                            <!-- Elemento 2: ? -->
+                            <!-- Elemento 2: Horas Extras -->
                             <div class="col-md-6">
                                 <div class="form-outline mb-4">
-                                    <input type="number" id="interfazHorasTrabajadas"
+                                    <input type="number" id="horasExtras"
                                         class="form-control" />
-                                    <label class="form-label" for="interfazHoras"> Diseño
-                                        de interfaz (trabajadas)</label>
+                                    <label class="form-label" for="horasExtras">Horas Extras</label>
                                 </div>
                             </div>
                             
+                            <!-- Elemento 3: Dias laborales -->
+                            <div class="col-md-6">
+                                <div class="form-outline mb-4">
+                                    <input type="number" id="dias"
+                                        class="form-control" />
+                                    <label class="form-label" for="dias">Días Laborales</label>
+                                </div>
+                            </div>
+
                         </div>
 
                         <!-- Submit button -->
